--- a/Custom Overlay/FinalGlacierFrost.css
+++ b/Custom Overlay/FinalGlacierFrost.css
@@ -54,7 +54,7 @@
 
 .xbox .stick {
     position: absolute;
-    background: url(DarkSticksMod.png);
+    background: url(GraphiteSticks.png);
     background-position: -85px 0;
     height: 83px;
     width: 83px;
