--- a/Custom Overlay/OverlayCode.css
+++ b/Custom Overlay/OverlayCode.css
@@ -54,7 +54,7 @@
 
 .xbox .stick {
     position: absolute;
-    background: url(SBS.png);
+    background: url(Stickznotmod.png);
     background-position: -85px 0;
     height: 83px;
     width: 83px;
